[gd_scene load_steps=7 format=3 uid="uid://c086hshnh55j5"]

[ext_resource type="Script" path="res://Scenes/Levels/GraphEditor/graph_editor.gd" id="1_8o4cl"]
[ext_resource type="ButtonGroup" uid="uid://b8f4ld5haadn7" path="res://Scenes/Levels/GraphEditor/graph_editor_mode_button_group.tres" id="2_mtsu3"]
[ext_resource type="PackedScene" uid="uid://drysmthmgro6c" path="res://Autoloads/Pause/PauseButton.tscn" id="3_fkwqj"]
[ext_resource type="PackedScene" uid="uid://p1gmq0pbvgk5" path="res://Scenes/Parts/graph.tscn" id="4_lemyg"]
[ext_resource type="Script" path="res://Scenes/Levels/GraphEditor/VertexSpawnPosition.gd" id="5_3ulu6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nxaq5"]

[node name="GraphEditor" type="Node2D" node_paths=PackedStringArray("graph", "vertex_spawn_position", "add_vertex_button", "selected_label", "vertex_mode_button", "edge_mode_button", "new_edge_line", "save_file_dialog", "load_file_dialog")]
script = ExtResource("1_8o4cl")
graph = NodePath("Graph")
vertex_spawn_position = NodePath("VertexSpawnPosition")
add_vertex_button = NodePath("GUI/MarginContainer/HBoxContainer/Buttons/AddVertex")
selected_label = NodePath("GUI/MarginContainer/SelectedLabel")
vertex_mode_button = NodePath("GUI/MarginContainer/HBoxContainer/Mode/VertexMode")
edge_mode_button = NodePath("GUI/MarginContainer/HBoxContainer/Mode/EdgeMode")
new_edge_line = NodePath("NewEdgeLine")
save_file_dialog = NodePath("SaveFileDialog")
load_file_dialog = NodePath("LoadFileDialog")

[node name="GUI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="SelectedLabel" type="Label" parent="GUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="HBoxContainer" parent="GUI/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="AddVertex" type="Button" parent="GUI/MarginContainer/HBoxContainer/Buttons"]
layout_mode = 2
text = "Add vertex"

[node name="Refresh" type="Button" parent="GUI/MarginContainer/HBoxContainer/Buttons"]
visible = false
layout_mode = 2
text = "Refresh"

[node name="HSeparator" type="HSeparator" parent="GUI/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="Mode" type="HBoxContainer" parent="GUI/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VertexMode" type="Button" parent="GUI/MarginContainer/HBoxContainer/Mode"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_mtsu3")
text = "Vertex mode"

[node name="EdgeMode" type="Button" parent="GUI/MarginContainer/HBoxContainer/Mode"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
button_group = ExtResource("2_mtsu3")
text = "Edge mode"

[node name="HSeparator2" type="HSeparator" parent="GUI/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="SaveLoad" type="HBoxContainer" parent="GUI/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="SaveGraph" type="Button" parent="GUI/MarginContainer/HBoxContainer/SaveLoad"]
layout_mode = 2
text = "Save Graph"

[node name="LoadGraph" type="Button" parent="GUI/MarginContainer/HBoxContainer/SaveLoad"]
layout_mode = 2
text = "Load Graph"

[node name="HSeparator3" type="HSeparator" parent="GUI/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="PauseButton" parent="GUI/MarginContainer/HBoxContainer" instance=ExtResource("3_fkwqj")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Graph properties:"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="GraphProperties" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MakeReflexive" type="Button" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/GraphProperties"]
layout_mode = 2
text = "Make reflexive"

[node name="MakeUndirected" type="Button" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/GraphProperties"]
layout_mode = 2
text = "Make undirected"

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Graph actions:"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="GraphActions" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fill" type="Button" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions"]
layout_mode = 2
text = "Fill"

[node name="Clear" type="Button" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions"]
layout_mode = 2
text = "Clear"

[node name="Invert" type="Button" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions"]
layout_mode = 2
text = "Invert"

[node name="Square" type="Button" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions"]
layout_mode = 2
text = "Square"

[node name="RetractStrictCorners" type="Button" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions"]
layout_mode = 2
text = "Retract strict corners"

[node name="RetractCorners" type="Button" parent="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions"]
layout_mode = 2
text = "Retract corners"

[node name="Misc" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="GUI/MarginContainer/VBoxContainer/Misc"]
layout_mode = 2
text = "Misc"

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer/VBoxContainer/Misc"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="GUI/MarginContainer/VBoxContainer/Misc/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="GraphActions" type="VBoxContainer" parent="GUI/MarginContainer/VBoxContainer/Misc/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PrintMappings" type="Button" parent="GUI/MarginContainer/VBoxContainer/Misc/HBoxContainer/GraphActions"]
layout_mode = 2
text = "Print mappings"

[node name="PanelContainer" type="PanelContainer" parent="GUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="GUI/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GUI/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Graph display:"
horizontal_alignment = 1

[node name="GraphTextDisplay" type="Label" parent="GUI/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1

[node name="Graph" parent="." node_paths=PackedStringArray("graph_data_display_label") instance=ExtResource("4_lemyg")]
graph_data_display_label = NodePath("../GUI/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/GraphTextDisplay")

[node name="SaveFileDialog" type="FileDialog" parent="."]
position = Vector2i(300, 100)
size = Vector2i(500, 400)
content_scale_mode = 2
content_scale_aspect = 1
ok_button_text = "Save"
root_subfolder = "Graphs"
filters = PackedStringArray("*.json")

[node name="LoadFileDialog" type="FileDialog" parent="."]
title = "Open a File or Directory"
position = Vector2i(300, 100)
size = Vector2i(500, 400)
content_scale_mode = 2
content_scale_aspect = 1
ok_button_text = "Open"
file_mode = 3
root_subfolder = "Graphs"
filters = PackedStringArray("*.csv", "*.tsv", "*.json")

[node name="VertexSpawnPosition" type="Node2D" parent="."]
position = Vector2(642, 358)
script = ExtResource("5_3ulu6")

[node name="Area2D" type="Area2D" parent="VertexSpawnPosition"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VertexSpawnPosition/Area2D"]
shape = SubResource("RectangleShape2D_nxaq5")

[node name="NewEdgeLine" type="Line2D" parent="."]
default_color = Color(0.192157, 0.639216, 1, 1)

[connection signal="pressed" from="GUI/MarginContainer/HBoxContainer/Buttons/AddVertex" to="." method="add_vertex"]
[connection signal="pressed" from="GUI/MarginContainer/HBoxContainer/Buttons/Refresh" to="." method="refresh"]
[connection signal="pressed" from="GUI/MarginContainer/HBoxContainer/Mode/VertexMode" to="." method="set_vertex_mode"]
[connection signal="pressed" from="GUI/MarginContainer/HBoxContainer/Mode/EdgeMode" to="." method="set_edge_mode"]
[connection signal="pressed" from="GUI/MarginContainer/HBoxContainer/SaveLoad/SaveGraph" to="SaveFileDialog" method="show"]
[connection signal="pressed" from="GUI/MarginContainer/HBoxContainer/SaveLoad/LoadGraph" to="LoadFileDialog" method="show"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/GraphProperties/MakeReflexive" to="." method="make_reflexive"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/GraphProperties/MakeUndirected" to="." method="make_undirected"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions/Fill" to="." method="fill"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions/Clear" to="." method="clear"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions/Invert" to="." method="invert"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions/Square" to="." method="square"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions/RetractStrictCorners" to="." method="retract_strict_corners"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/GraphActions/RetractCorners" to="." method="retract_corners"]
[connection signal="pressed" from="GUI/MarginContainer/VBoxContainer/Misc/HBoxContainer/GraphActions/PrintMappings" to="." method="print_mappings"]
